# miniOS

./: .gitignore  README.md  build-windows.bat  build.sh  run-real-fs.bat  run-simple.bat  run-windows.bat  run.bat  run.sh  test-modules.bat  test-node.bat
core/: CMakeLists.txt  main.cpp
core/filesystem/: filesystem.cpp  filesystem.h
core/kernel/: kernel.cpp  kernel.h
core/memory/: memory_manager.cpp  memory_manager.h
core/process/: process.cpp  process.h
mini-os-files/: hello.txt
shell/: editor-fix.js  index.js  package-lock.json  package.json  real-fs-refactored.js  real-fs.js  simple.js  vim-editor.js
shell/apps/: text_editor.js
shell/commands/: command_handler.js
shell/utils/: core_interface.js  simulated_core.js
